#
# Copyright 2021-2024 Software Radio Systems Limited
#
# By using this file, you agree to the terms and conditions set
# forth in the LICENSE file which can be found at the top level of
# the distribution.
#

add_subdirectory(asn1)
add_subdirectory(cu_cp)
add_subdirectory(cu_up)
add_subdirectory(du)
add_subdirectory(du_high)
if (NOT DU_SPLIT_6)
    add_subdirectory(du_low)
endif ()
add_subdirectory(du_manager)
add_subdirectory(e1ap)
add_subdirectory(e2)
add_subdirectory(f1ap)
add_subdirectory(f1u)
add_subdirectory(fapi)
add_subdirectory(fapi_adaptor)
add_subdirectory(gateways)
add_subdirectory(gtpu)
add_subdirectory(instrumentation)
if (DPDK_FOUND)
    add_subdirectory(hal)
endif (DPDK_FOUND)
add_subdirectory(mac)
add_subdirectory(ngap)
add_subdirectory(nru)
if (DU_SPLIT_7_2 OR DU_SPLIT_DYNAMIC)
    add_subdirectory(ofh)
endif ()
add_subdirectory(pcap)
add_subdirectory(pdcp)
if (NOT DU_SPLIT_6)
    add_subdirectory(phy)
endif ()
add_subdirectory(psup)
if (DU_SPLIT_DYNAMIC OR DU_SPLIT_8)
    add_subdirectory(radio)
endif ()
add_subdirectory(ran)
add_subdirectory(rlc)
add_subdirectory(rrc)
if (NOT DU_SPLIT_6)
    add_subdirectory(ru)
endif ()
add_subdirectory(scheduler)
add_subdirectory(sdap)
add_subdirectory(security)
add_subdirectory(srslog)
add_subdirectory(srsvec)
add_subdirectory(support)
