add_subdirectory(adt)
add_subdirectory(support)
add_subdirectory(asn1)
add_subdirectory(du_high)
add_subdirectory(du_manager)
add_subdirectory(fapi)
add_subdirectory(fapi_adaptor)
add_subdirectory(mac)
add_subdirectory(scheduler)
add_subdirectory(phy)
add_subdirectory(radio)
add_subdirectory(ran)
add_subdirectory(srslog)
add_subdirectory(srsvec)
