#
# Copyright 2013-2022 Software Radio Systems Limited
#
# By using this file, you agree to the terms and conditions set
# forth in the LICENSE file which can be found at the top level of
# the distribution.
#

add_subdirectory(adt)
add_subdirectory(support)
add_subdirectory(asn1)
add_subdirectory(du_high)
add_subdirectory(du_manager)
add_subdirectory(f1_interface)
add_subdirectory(fapi)
add_subdirectory(fapi_adaptor)
add_subdirectory(mac)
add_subdirectory(scheduler)
add_subdirectory(phy)
add_subdirectory(radio)
add_subdirectory(ran)
add_subdirectory(srslog)
add_subdirectory(srsvec)
